--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,5 +8,5 @@ jobs:
     - uses: actions/checkout@v2
     - name: Run Django unit tests
       run:
-        pip install --user django
+        pip3  install --user django== 3.2
         python3 manage.py test
