--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,5 +8,5 @@ jobs:
     - uses: actions/checkout@v2
     - name: Run Django unit tests
       run:
-        pip3  install  django==4.0
+        pip3 -m  install --user  django
         python3 manage.py test
